HS. Probably last commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="name">Name</string>
     <string name="easy">Easy</string>
     <string name="medium">Medium</string>
-    <string name="hard">hard</string>
+    <string name="hard">Hard</string>
     <string name="play_standard">Play Standard</string>
     <string name="play_cars">Play Cars</string>
     <string name="high_scores">Standard High Scores</string>
